--- a/content/cn/R与Armadillo混合编程.html
+++ b/content/cn/R与Armadillo混合编程.html
@@ -1,5 +1,5 @@
 ---
-title: "R与Cpp混合编程"
+title: "R与Armadillo混合编程"
 author: "刘伟"
 date: '2021-01-29'
 output: pdf_document
@@ -11,6 +11,12 @@ output: pdf_document
 <h1>armadillo官网</h1>
 <p><a href="http://arma.sourceforge.net/" class="uri">http://arma.sourceforge.net/</a>
 可以使用ctrl+F在该网站上搜索需要查阅的函数。</p>
+</div>
+<div id="待解决问题" class="section level1">
+<h1>待解决问题</h1>
+<ol style="list-style-type: decimal">
+<li>为什么cpp中定义的函数返回List后，List的成分为矩阵时，无法做index_max()计算和返回该矩阵到另一个List的成分中？？</li>
+</ol>
 </div>
 <div id="注意事项" class="section level1">
 <h1>注意事项</h1>
