--- a/content/cn/R与Armadillo混合编程.html
+++ b/content/cn/R与Armadillo混合编程.html
@@ -28,6 +28,37 @@ mat mat1 = aList[&quot;mat&quot;]; // 注意这里的申明mat不能省略，否
 <li><p>若A是一个矩阵，则A.col(k)可以直接支持diagmat(),repmat()函数中使用，表示它返回一个列向量。</p></li>
 <li><p>若C是一个cube，则C.slice(k)是一个矩阵，支持矩阵的所有运算，比如.t(),.i()以及A + b*C.slice(k);而
 C.col(k)不是一个矩阵而是一个subcube，不支持直接的矩阵运算，只能通过赋值给一个矩阵tmpMat后转化为一个矩阵后，再进行相应的矩阵运算。为了更加高效的使用cube，请注意cube的存储格式，将需要参与矩阵乘法的subcube储存到第三个维度上。</p></li>
-<li></li>
 </ol>
+</div>
+<div id="如何传递非结构化数据" class="section level1">
+<h1>如何传递非结构化数据</h1>
+<p>下面这段使用List的代码非常经典，值得学习。</p>
+<pre class="rmd"><code>#include &quot;RcppArmadillo.h&quot;
+// [[Rcpp::depends(RcppArmadillo)]]
+#include&lt;ctime&gt;
+
+
+#define INT_MIN (-INT_MAX - 1)
+
+using namespace Rcpp;
+using namespace arma;
+using namespace std;
+
+//[[Rcpp::export]] 
+List calList(const Rcpp::List&amp; alist, const Rcpp::List blist){
+  int r,  L1 = alist.length();
+  cout&lt;&lt;&quot;L1=&quot;&lt;&lt;L1&lt;&lt;endl;
+  field&lt;mat&gt; Xf(1,2), Wf(1,2);
+  for(r=0; r &lt; L1; ++r){
+    mat Xtmp = alist[r];
+    Xf(0,r) = Xtmp;
+    mat Wtmp = blist[r];
+    Wf(0,r) = Wtmp;
+  }
+  List resList = List::create(
+    Rcpp::Named(&quot;Xf&quot;) = Xf,
+    Rcpp::Named(&quot;Wf&quot;) = Wf
+  );
+  return resList;
+}</code></pre>
 </div>
