--- a/content/en/summary_discussion_problems.html
+++ b/content/en/summary_discussion_problems.html
@@ -32,3 +32,10 @@ output: pdf_document
 <li><p>Look up to the settting of signal-noise ratio.</p></li>
 </ol>
 </div>
+<div id="summary-2021-03-11" class="section level1">
+<h1>Summary, 2021-03-11</h1>
+<p>The aims are as follows:</p>
+<ol style="list-style-type: decimal">
+<li>Think about adding the Hidden Gaussian Markov fields into model, then use ICM algorithm to implement it.s</li>
+</ol>
+</div>
