--- a/content/cn_note/SpacerangerLearn.html
+++ b/content/cn_note/SpacerangerLearn.html
@@ -44,7 +44,8 @@ spaceranger aggr ##可以将同分组，同流程的样本进行合并</code></p
 </div>
 <div id="理解空间转录组数据" class="section level3">
 <h3>理解空间转录组数据</h3>
-<p>每个spot(位置)包含1-200个cells（细胞），每个spot就是一个observation，以spot为单位，而不是以单个细胞为单位。 每个细胞里面都有一整套的基因（或DNA），我们可以想象成每个spot就是一个细胞，那么它就有所有的基因(<span class="math inline">\(G_1, G_2, \cdots, G_p\)</span>)。但是每个基因在不同的spot中的表达量是不一样的，而count data就是基因在不同位置上表达量的计数，count越高表达越强。count矩阵一般是稀疏的，因为在spot中表达的基因只有少数，大多数是不在该spot上表达，所以该spot对应的很多基因表达为0.</p>
+<p>每个spot(位置)包含1-200个cells（细胞），每个spot就是一个observation，以spot为单位，而不是以单个细胞为单位。 每个细胞里面都有一整套的基因（或DNA），我们可以想象成每个spot就是一个细胞，那么它就有所有的基因(<span class="math display">\[G_1, G_2, \cdots, G_p\]</span>)。
+但是每个基因在不同的spot中的表达量是不一样的，而count data就是基因在不同位置上表达量的计数，count越高表达越强。count矩阵一般是稀疏的，因为在spot中表达的基因只有少数，大多数是不在该spot上表达，所以该spot对应的很多基因表达为0.</p>
 <p>转录组（transcriptome）指特定生物体在某种状态下，细胞内所有基因转录产物的总和，包括信使RNA(mRNA, message RNA)、转运RNA (tRNA, transfer RNA)及非编码RNA，狭义上指所有的mRNA的集合。从RNA层次研究基因表达情况，即为转录组学（transcriptomics），是研究细胞表型和功能的一个重要手段。</p>
 <p>转录组是连接基因组遗传信息和生物功能的蛋白质组的纽带，转录水平的调控是最重要也是目前研究最广泛的生物体调控方式。转录组的研究比基因组的研究能给出更高效的有用信息。与基因组不同，转录组更有时间空间性。除了异常的mRNA降解现象以外，转录组反映的是特定条件下活跃表达的基因。</p>
 <p>转录组的研究可以提供什么条件下什么基因表达什么信息，从而推断相应未知基因的功能，揭示特定调节基因的作用机制。对转录本的定量可以了解特定基因的活性和表达量，用于疾病的诊断和治疗。通过对转录组的研究，也让个性化医疗的目标，从共性转移到个性成为可能。</p>
@@ -60,11 +61,4 @@ spaceranger aggr ##可以将同分组，同流程的样本进行合并</code></p
 ### 细胞
 动物细胞结构：动物细胞有细胞膜、细胞质、细胞核。动物细胞的细胞质包括细胞质基质和细胞器。动物细胞的细胞器包括内质网、线粒体、高尔基体、核糖体、溶酶体、中心体，动物细胞与植物细胞相比较，具有很多相似的地方，如动物细胞也具有细胞膜、细胞质、细胞核等结构。但是动物细胞与植物细胞又有一些重要的区别，如动物细胞的最外面是细胞膜，没有细胞壁;动物细胞的细胞质中不含叶绿体，也不形成中央液泡。而高等植物细胞没有中心体</p>
 <p>细胞核是细胞内遗传信息的储存、复制和转录的主要场所。大多呈球形或椭圆形。通常一个,也有两个或多个的。借双层多孔的核膜与细胞质分隔。核内含有核液、染色质(或染色体)和核仁</p>
-</div>
-<div id="r中创建s4对象" class="section level3">
-<h3>R中创建S4对象</h3>
-<p>要创建S4对象，我们可以使用setClass函数，在该函数中我们将传递对象名称，列名称以及将存储在列中的数据类型。例如，如果我们要创建一个具有名称数据和两个由x和y调用的数字列的S4，则可以使用setClass（“ data”，representation（x1 =“ numeric”，x2 =“ numeric”））。</p>
-<pre class="rmd"><code>setClass(&quot;data1&quot;,representation(x1=&quot;numeric&quot;,x2=&quot;numeric&quot;))
-data1&lt;-new(&quot;data1&quot;,x1=rnorm(20),x2=rexp(20,1.12))
-data1</code></pre>
 </div>
