--- a/content/cn_note/RplotLearn.html
+++ b/content/cn_note/RplotLearn.html
@@ -7,17 +7,29 @@ output: pdf_document
 
 
 
-<div id="普通plot绘图" class="section level1">
-<h1>普通plot绘图</h1>
-<div id="绘制折线图" class="section level2">
-<h2>绘制折线图</h2>
+<div id="toc" class="section level2">
+<h2>Table of Content</h2>
+<ul>
+<li><a href="#ordiPlot">普通plot绘图</a></li>
+<li><a href="#ggplot">ggplot绘图</a></li>
+<li><a href="#yscale">Work on scale of axis</a></li>
+<li><a href="#layout">Work on layout</a></li>
+<li><a href="#colors">Work on colors</a></li>
+<li><a href="#autoSaveFig">Auto save many figures</a></li>
+<li><a href="#theme">Work on theme</a></li>
+</ul>
+</div>
+<div id="ordiPlot" class="section level2">
+<h2>普通plot绘图</h2>
+<div id="绘制折线图" class="section level3">
+<h3>绘制折线图</h3>
 <p>绘制折线图，并设置合适的坐标字体</p>
 <pre class="rmd"><code>par(mar=c(4.8,4.8,2,2))
 plot(1:(n_egv-1), egrat, type=&#39;o&#39;, xlab=&#39;q&#39;, ylab=&#39;eigv. ratio&#39;, lwd=3, cex.axis = 1.6, cex.lab=1.8)
 grid(col=1, lwd=2, lty=2)</code></pre>
 </div>
-<div id="坐标轴标签旋转绘图" class="section level2">
-<h2>坐标轴标签旋转绘图</h2>
+<div id="坐标轴标签旋转绘图" class="section level3">
+<h3>坐标轴标签旋转绘图</h3>
 <pre class="rmd"><code>par(mar=c(6,6,2,2))
 plot(1:nrow(dat_Tr_sort_inter), axes=F,
      dat_Tr_sort_inter$total_trainhours[order_Tr], 
@@ -27,40 +39,19 @@ axis(1, 1:nrow(dat_Tr_sort_inter),labels=dat_Tr_sort_inter$Enames[order_Tr],
      las  = 2)
 axis(2)</code></pre>
 </div>
-<div id="批量保存图片" class="section level2">
-<h2>3. 批量保存图片</h2>
-<pre class="rmd"><code># filepath &lt;- &#39;IncreasedModellingFiles/Model6_HuBei_Guaipoints/&#39;
-for(k in 1:n.HuBei){
-  
-  # jpeg(file = paste0(filepath, &#39;/&#39;, row.names(Zkt.HuBei)[k], &#39;.jpg&#39;)) # 保存为jpg
-  pdf(file = paste0(filepath, &#39;/&#39;, row.names(Zkt.HuBei)[k], &#39;.pdf&#39;)) #保存为pdf
-  plot(cum_quezhen_pred[k, ], axes = F ,type=&#39;l&#39;, main=row.names(Zkt.HuBei)[k],
-       ylab=&#39;cum. identified illness&#39;, xlab=&#39;Date&#39;,col=2, lty=2)
-  lines(cum_quezhen[k,], col=1)
-  points(cum_quezhen[k,], col=1)
-  v1_tmp &lt;- which(colnames(Zkt_pred) == guaipoint_vec[k])
-  abline(v=v1_tmp, col = &#39;blue&#39;)
-  text(x=v1_tmp, y=cum_quezhen_pred[k, round(TT.HuBei/2)],
-       guaipoint_vec[k])
-  axis(1, 1:ncol(Zkt_pred),labels= colnames(Zkt_pred))
-  axis(2)
-  grid()
-  dev.off()
-} </code></pre>
-</div>
-<div id="怎么添加图像的形状参数有的曲线有形状有的曲线没有形状没有形状的曲线用-1表示" class="section level2">
-<h2>4 怎么添加图像的形状参数，有的曲线有形状，有的曲线没有形状，没有形状的曲线用-1表示</h2>
+<div id="怎么添加图像的形状参数有的曲线有形状有的曲线没有形状没有形状的曲线用-1表示" class="section level3">
+<h3>4 怎么添加图像的形状参数，有的曲线有形状，有的曲线没有形状，没有形状的曲线用-1表示</h3>
 <pre class="rmd"><code>legend(&#39;topleft&#39;, c(&#39;真实曲线&#39;, &#39;预测曲线&#39;, &#39;拐点时间&#39;), col=c(1,2,4), lty=1, pch=c(1,-1,-1))</code></pre>
 </div>
-<div id="r绘制长度不同的向量的箱线图" class="section level2">
-<h2>5. R绘制长度不同的向量的箱线图</h2>
+<div id="r绘制长度不同的向量的箱线图" class="section level3">
+<h3>5. R绘制长度不同的向量的箱线图</h3>
 <pre class="rmd"><code>Rt_list &lt;- list(Rt_Pro, Rt_Hubei, Rt_Wuhan, Rt_Japan, Rt_Skorea, Rt_Sing, Rt_Italy)
 boxplot(Rt_list, ylim=c(0,5.2), names = c(&#39;China&#39;, &#39;Hubei&#39;, &#39;Wuhan&#39;, &#39;Japan&#39;, &#39;SKorea&#39;, &#39;Singapore&#39;,
                                           &#39;Italy&#39;))
 abline(h=1, lty=3,col=&#39;green4&#39;)</code></pre>
 </div>
-<div id="添加没有边框的图例利用btyn" class="section level2">
-<h2>6. 添加没有边框的图例：利用bty=‘n’</h2>
+<div id="添加没有边框的图例利用btyn" class="section level3">
+<h3>6. 添加没有边框的图例：利用bty=‘n’</h3>
 <pre class="rmd"><code>plot(1: (nr-id_vec[1]+ 1-time), ratio7(dat[(id_vec[1]): nr,1], time), 
        xlim=xlim, ylim=ylim, col=1,
        type=&#39;o&#39;, xlab=&#39;Day&#39;, ylab=&#39;ratio&#39;)
@@ -71,12 +62,14 @@ abline(h=1, lty=3,col=&#39;green4&#39;)</code></pre>
   abline(h =1 ,col=1, lty=2)
   legend(&#39;topright&#39;, names(dat), col=1:nc, pch=1:nc,lty=1, bty=&#39;n&#39;)
 </code></pre>
+<p><a href="#toc">↑ 返回目录页</a><br><br></p>
 </div>
 </div>
-<div id="漂亮美观强大的ggplot2绘图技术" class="section level1">
-<h1>2 漂亮美观强大的ggplot2绘图技术</h1>
-<div id="绘制箱线图" class="section level2">
-<h2>1 绘制箱线图</h2>
+<div id="ggplot" class="section level2">
+<h2>2 漂亮美观强大的ggplot2绘图技术</h2>
+<div id="basic-plots" class="section level3">
+<h3>Basic plots</h3>
+<p>1 绘制箱线图</p>
 <pre class="r"><code>datafun &lt;- function(mat1, mat2, xname, methodname){
   n1 &lt;- dim(mat1)[1];
   n2 &lt;- dim(mat2)[1];
@@ -110,11 +103,9 @@ ggplot(dat, aes(x=snp_sparse, y=Value, fill=method)) + geom_boxplot(aes(fill=met
   theme(axis.text.x = element_text(size = 12, angle=70, vjust=0.6)
 ,axis.text.y = element_text(size = 18),plot.title = element_text(hjust = 30,vjust=-40,size=14) 
 ,legend.position=&quot;none&quot;) +ylim(c(0,2))</code></pre>
-<pre><code>## Warning: Removed 215 rows containing non-finite values (stat_boxplot).</code></pre>
-<p><img src="/cn_note/RplotLearn_files/figure-html/unnamed-chunk-7-1.png" width="672" /></p>
-</div>
-<div id="利用ggplot2画折线图" class="section level2">
-<h2>利用ggplot2画折线图</h2>
+<pre><code>## Warning: Removed 195 rows containing non-finite values (stat_boxplot).</code></pre>
+<p><img src="/cn_note/RplotLearn_files/figure-html/unnamed-chunk-6-1.png" width="672" /></p>
+<p>2 利用ggplot2画折线图</p>
 <pre class="r"><code>elboPlot &lt;- function(elbo_seq){
   library(ggplot2)
   p1 &lt;- ggplot(data=data.frame(ELBO= elbo_seq, iter=1:length(elbo_seq)),
@@ -130,7 +121,7 @@ ggplot(dat, aes(x=snp_sparse, y=Value, fill=method)) + geom_boxplot(aes(fill=met
     ) 
 }
 elboPlot(elbo_seq = 1:100)</code></pre>
-<p><img src="/cn_note/RplotLearn_files/figure-html/unnamed-chunk-8-1.png" width="672" /></p>
+<p><img src="/cn_note/RplotLearn_files/figure-html/unnamed-chunk-7-1.png" width="672" /></p>
 <pre class="r"><code>single_line_Plot &lt;- function(y, x=NULL, x.name=&quot;iter&quot;, y.name=&quot;logLik&quot;,
                              title.name=&quot;Title&quot;,title.col=&quot;black&quot;, title.size=20, x.axis.col=&#39;black&#39;, x.axis.size=14, y.axis.col=&#39;black&#39;, y.axis.size=14, xlab.size=18, ylab.size=18, line.size=2){
   library(ggplot2)
@@ -149,21 +140,100 @@ elboPlot(elbo_seq = 1:100)</code></pre>
     ) 
 }
 single_line_Plot(1:10)</code></pre>
-<p><img src="/cn_note/RplotLearn_files/figure-html/unnamed-chunk-8-2.png" width="672" /></p>
-</div>
-<div id="如何画y轴坐标不均匀的图" class="section level2">
-<h2>如何画y轴坐标不均匀的图</h2>
+<p><img src="/cn_note/RplotLearn_files/figure-html/unnamed-chunk-7-2.png" width="672" /></p>
+<p><a href="#toc">↑ 返回目录页</a><br><br>
+### Work on scale of axis{#yscale}</p>
 <pre class="rmd"><code>simutool::boxPlot(y=timeMat, title.name = &quot; &quot;,y.name = &#39;Time(sec.)&#39;) +  scale_y_log10()</code></pre>
+<p><a href="#toc">↑ 返回目录页</a><br><br></p>
 </div>
-<div id="如何批量画图和保持ggplot图片" class="section level2">
-<h2>如何批量画图和保持ggplot图片</h2>
-<p>如何用patchwork并排画多张图片</p>
+<div id="layout" class="section level3">
+<h3>Work on layout</h3>
+<p>类似par(mfrow=c(2,2))的用法包：</p>
+<pre class="rmd"><code>library(grid)
+grid.newpage()
+pushViewport(viewport(layout = grid.layout(2,2)))
+print(p1, vp = viewport(layout.pos.row = 1, layout.pos.col = 1))
+print(p2, vp = viewport(layout.pos.row = 1, layout.pos.col = 2))
+print(p3, vp = viewport(layout.pos.row = 2, layout.pos.col = 1))
+print(p4, vp = viewport(layout.pos.row = 2, layout.pos.col = 2))</code></pre>
+<p>Or use the patchwork package</p>
+<pre class="rmd"><code>library(patchwork)
+p &lt;- p1+p2+p3+p4 + 
+   plot_layout(byrow = T, nrow=2, ncol=2)</code></pre>
+<p><a href="#toc">↑ 返回目录页</a><br><br></p>
+</div>
+<div id="colors" class="section level3">
+<h3>Work on colors</h3>
+<pre class="rmd"><code>cols &lt;- c(&quot;antiquewhite2&quot;, &quot;dodgerblue2&quot;,&quot;palegreen2&quot;,&quot;goldenrod2&quot;,&quot;red&quot;,
+          &quot;antiquewhite4&quot;,&quot;dodgerblue4&quot;,&quot;palegreen4&quot;,&quot;goldenrod4&quot;,
+          &quot;blue4&quot;, &quot;brown&quot;)
+# check the color codes
+library(colorspace)
+ramp.list = adjust_transparency(cols,   alpha = 0.6) # Check the color codes in the specified transparency.
+ramp.list
+# plot the color bar to check the colors
+barplot(rep(1, length(ramp.list)), axes = FALSE, space = 0, col = ramp.list)
+
+cols[-5] &lt;- ramp.list[-5] # save the colors we required.
+manul_fill_col &lt;- scale_fill_manual(values = cols)
+# Then plot
+p1   + geom_violin(trim=FALSE, scale = &quot;width&quot; )+
+  geom_boxplot(width=0.1, fill=&quot;white&quot;) +  facet_wrap(PCs~Error,scales= &quot;free&quot; ) + labs(x=NULL)+ 
+  scale_x_discrete(breaks = NULL) + manul_fill_col +
+  thmem_used </code></pre>
+<p>ggsci is a wonderful colors platte package, which can help you choose color automatically.
+ggcsi配色网址：
+<a href="http://www.sci666.net/60850.html" class="uri">http://www.sci666.net/60850.html</a></p>
+<pre class="rmd"><code>library(ggsci) 
+library(patchwork)
+g1 &lt;- clusterPlot(dlpfc2, label=clusters[-na_id], palette=NULL, size=0.05) 
+  
+p1 &lt;- g1 + scale_fill_jco() + labs(title= &#39;JCO&#39;) + guides(fill=F)
+p2 &lt;- g1 + scale_fill_npg() + labs(title= &#39;Nature&#39;)
+p3 &lt;- g1 + scale_fill_aaas()+ labs(title= &#39;Science&#39;)
+p4 &lt;- g1 +  scale_fill_nejm()+ labs(title= &#39;NEJM&#39;)
+ p1 + p2 + p3 + p4
+p5 &lt;- g1 + scale_fill_lancet() + labs(title= &#39;Lancet&#39;)
+p6 &lt;- g1 + scale_fill_jama() + labs(title= &#39;JAMA&#39;)
+p7 &lt;- g1 +  scale_fill_d3() + labs(title= &#39;d3&#39;)
+p8 &lt;- g1 +   scale_fill_ucscgb()+ labs(title= &#39;UCSCGB&#39;)
+p5 + p6 + p7 + p8
+p5 &lt;- g1 + scale_fill_locuszoom() + labs(title= &#39;Locuszoom&#39;)
+p6 &lt;- g1 + scale_fill_igv() + labs(title= &#39;IGV&#39;)
+p7 &lt;- g1 +  scale_fill_startrek() + labs(title= &#39;Startrek&#39;)
+p8 &lt;- g1 +   scale_fill_uchicago()+ labs(title= &#39;Uchicago&#39;)
+p5 + p6 + p7 + p8
+</code></pre>
+<p><a href="#toc">↑ 返回目录页</a><br><br></p>
+</div>
+<div id="autoSaveFig" class="section level3">
+<h3>Auto save many figures</h3>
+<p>Ordinary plot in R</p>
+<pre class="rmd"><code># filepath &lt;- &#39;IncreasedModellingFiles/Model6_HuBei_Guaipoints/&#39;
+for(k in 1:n.HuBei){
+  
+  # jpeg(file = paste0(filepath, &#39;/&#39;, row.names(Zkt.HuBei)[k], &#39;.jpg&#39;)) # 保存为jpg
+  pdf(file = paste0(filepath, &#39;/&#39;, row.names(Zkt.HuBei)[k], &#39;.pdf&#39;)) #保存为pdf
+  plot(cum_quezhen_pred[k, ], axes = F ,type=&#39;l&#39;, main=row.names(Zkt.HuBei)[k],
+       ylab=&#39;cum. identified illness&#39;, xlab=&#39;Date&#39;,col=2, lty=2)
+  lines(cum_quezhen[k,], col=1)
+  points(cum_quezhen[k,], col=1)
+  v1_tmp &lt;- which(colnames(Zkt_pred) == guaipoint_vec[k])
+  abline(v=v1_tmp, col = &#39;blue&#39;)
+  text(x=v1_tmp, y=cum_quezhen_pred[k, round(TT.HuBei/2)],
+       guaipoint_vec[k])
+  axis(1, 1:ncol(Zkt_pred),labels= colnames(Zkt_pred))
+  axis(2)
+  grid()
+  dev.off()
+} </code></pre>
+<p>ggplot2:</p>
 <pre class="rmd"><code>filepath &lt;- &quot;D:\\LearnFiles\\Research paper\\ProPCA\\RealData&quot;
 n_ID &lt;- length(name_ID12)
 for(j in 1: n_ID){
   
   cat(&#39;brain &#39;, j, &#39;\n&#39;)
-  library(patchwork)
+  
   clusters &lt;- list()
   clusters[[1]] &lt;- clusterList12[[j]]$SSDRcluster
   clusters[[2]] &lt;- clusterList12[[j]][[paste0(&#39;BayesSpace&#39;, clustNumMat[j,3])]]
@@ -176,7 +246,7 @@ for(j in 1: n_ID){
   library(BayesSpace)
   library(ggplot2)
   
-  
+  ## Plot the figures we require to save.
   dlpfc2 &lt;- dlpfc[,-na_id] # dropout the missing values
   p1 &lt;- clusterPlot(dlpfc2, label=clusters[[4]][-na_id], palette=NULL, size=0.05) +
     scale_fill_viridis_d(option = &quot;A&quot;, labels = 1:clustNumMat[j,1]) +
@@ -195,18 +265,49 @@ for(j in 1: n_ID){
     scale_fill_viridis_d(option = &quot;A&quot;, labels = 1:clustNumMat[j,4]) +
     labs(title=paste0(&quot;GMRF: ARI=&quot;, round(AriMat[j,3],2)))
   # pdf(file =) #保存为pdf
+  # layout the multiple figures
+  library(patchwork)
   p &lt;- p1+p2+p3+p4
-  # dev.off()
+  # Start to save figures.
   ggsave(filename= paste0(filepath, &#39;\\Figures\\brain&#39;, name_ID12[j], &#39;method3.pdf&#39;),
-         plot = p)
+         plot = p,width = 10, height = 8, units = &quot;in&quot;, dpi = 1000)
 }</code></pre>
-<p>类似par(mfrow=c(2,2))的用法包：</p>
-<pre class="rmd"><code>library(grid)
-grid.newpage()
-pushViewport(viewport(layout = grid.layout(2,2)))
-print(p1, vp = viewport(layout.pos.row = 1, layout.pos.col = 1))
-print(p2, vp = viewport(layout.pos.row = 1, layout.pos.col = 2))
-print(p3, vp = viewport(layout.pos.row = 2, layout.pos.col = 1))
-print(p4, vp = viewport(layout.pos.row = 2, layout.pos.col = 2))</code></pre>
+<p><a href="#toc">↑ 返回目录页</a><br><br></p>
+</div>
+<div id="theme" class="section level3">
+<h3>Work on theme</h3>
+<pre class="rmd"><code>library(ggtext)
+library(rlang)
+library(ggthemes)
+
+library(ggplot2)
+element_textbox_highlight &lt;- function(..., hi.labels = NULL, hi.fill = NULL,
+                                      hi.col = NULL, hi.box.col = NULL, hi.family = NULL) {
+  structure(
+    c(element_textbox(...),
+      list(hi.labels = hi.labels, hi.fill = hi.fill, hi.col = hi.col, hi.box.col = hi.box.col, hi.family = hi.family)
+    ),
+    class = c(&quot;element_textbox_highlight&quot;, &quot;element_textbox&quot;, &quot;element_text&quot;, &quot;element&quot;)
+  )
+}
+
+strip.text1 &lt;- element_textbox_highlight(
+  family = NULL, size = 12, face = &quot;bold&quot;,
+  fill = &quot;white&quot;, box.color = &quot;chartreuse4&quot;, color = &quot;black&quot;,
+  halign = .5, linetype = 1, r = unit(5, &quot;pt&quot;), width = unit(1, &quot;npc&quot;),
+  padding = margin(5, 0, 3, 0), margin = margin(0, 1, 3, 1),
+  hi.labels = c(&quot;1997&quot;, &quot;1998&quot;, &quot;1999&quot;, &quot;2000&quot;),
+  hi.fill = &quot;chartreuse4&quot;, hi.box.col = &quot;black&quot;, hi.col = &quot;white&quot;
+)
+# This theme&#39;s background is filled with white, boarder with black.
+thmem_used &lt;- theme(axis.text.x=element_blank(),
+                    axis.text.y=element_text(size=12, color=1),
+                    axis.title.x = element_text(size=12, color=&#39;black&#39;),
+                    axis.title.y = element_text(size=14, color=&#39;black&#39;),
+                    strip.text = strip.text1,#element_text(size=12),
+                    legend.direction = &quot;horizontal&quot;, legend.position = &quot;bottom&quot;,
+                    legend.text=element_text(size=15),
+                    panel.background= element_rect(fill = &#39;white&#39;, colour = &#39;black&#39;))
+</code></pre>
 </div>
 </div>
