--- a/content/research/2020-12-27-Formula.html
+++ b/content/research/2020-12-27-Formula.html
@@ -1,13 +1,20 @@
 ---
 title: "Common-used Formula"
 author: "Wei Liu"
-date: '2020-12-27'
+date: '2021-12-29'
 output: pdf_document
 layout: post
 ---
 
 
 
+<div id="entropy-formula-of-multivariate-normal-distribution" class="section level2">
+<h2>Entropy formula of multivariate normal distribution</h2>
+<p>Assume <span class="math inline">\(x \sim N(\mu, \Sigma)\)</span> and <span class="math inline">\(x\in R^p\)</span>, then the entropy is
+<span class="math display">\[E_x(-\ln P(x; \mu, \Sigma))=\frac{1}{2}\ln|\Sigma| + \frac{p}{2}(1+\ln(2\pi)).\]</span></p>
+<p>For more details, please see <a href="https://math.stackexchange.com/questions/2029707/entropy-of-the-multivariate-gaussian" class="uri">https://math.stackexchange.com/questions/2029707/entropy-of-the-multivariate-gaussian</a>
+.</p>
+</div>
 <div id="decomposition-of-matrix" class="section level2">
 <h2>Decomposition of Matrix</h2>
 <p>Cholskey decomposition, QR decomposition, LU decomposition, SVD decomposition and Jordan decomposition:
