--- a/content/cn_note/RplotLearn.html
+++ b/content/cn_note/RplotLearn.html
@@ -1,5 +1,5 @@
 ---
-title: "R绘制漂亮的图"
+title: "R绘制漂亮的图一"
 author: "刘伟"
 date: '2021-04-12'
 output: pdf_document
@@ -87,10 +87,10 @@ abline(h=1, lty=3,col=&#39;green4&#39;)</code></pre>
   data$snp_sparse =  c(rep(xname, each = n1), rep(xname, each = n2))
   return(data)
 }
-library(&quot;mvtnorm&quot;)
-library(&quot;ggplot2&quot;)</code></pre>
-<pre><code>## Warning: 程辑包&#39;ggplot2&#39;是用R版本4.0.4 来建造的</code></pre>
-<pre class="r"><code>n1 &lt;- 50;
+library(&quot;mvtnorm&quot;)</code></pre>
+<pre><code>## Warning: package &#39;mvtnorm&#39; was built under R version 4.0.5</code></pre>
+<pre class="r"><code>library(&quot;ggplot2&quot;)
+n1 &lt;- 50;
 n2 &lt;- 100;
 p &lt;- 4;
 mat1 &lt;- rmvnorm(n1, mean = rep(0, p), sigma = diag(p), method = &quot;chol&quot;);
@@ -103,7 +103,7 @@ ggplot(dat, aes(x=snp_sparse, y=Value, fill=method)) + geom_boxplot(aes(fill=met
   theme(axis.text.x = element_text(size = 12, angle=70, vjust=0.6)
 ,axis.text.y = element_text(size = 18),plot.title = element_text(hjust = 30,vjust=-40,size=14) 
 ,legend.position=&quot;none&quot;) +ylim(c(0,2))</code></pre>
-<pre><code>## Warning: Removed 195 rows containing non-finite values (stat_boxplot).</code></pre>
+<pre><code>## Warning: Removed 216 rows containing non-finite values (stat_boxplot).</code></pre>
 <p><img src="/cn_note/RplotLearn_files/figure-html/unnamed-chunk-6-1.png" width="672" /></p>
 <p>2 利用ggplot2画折线图</p>
 <pre class="r"><code>elboPlot &lt;- function(elbo_seq){
