--- a/content/cn_note/R_other_note.html
+++ b/content/cn_note/R_other_note.html
@@ -1,5 +1,5 @@
 ---
-title: "R语言零碎笔记"
+title: "R语言生信笔记"
 author: "刘伟"
 date: '2021-04-12'
 output: pdf_document
@@ -7,38 +7,81 @@ output: pdf_document
 
 
 
-<p>## Table of Content {#toc}</p>
+<div id="toc" class="section level2">
+<h2>Table of Content</h2>
 <ul>
-<li><a href="#ordiPlot">普通plot绘图</a></li>
-<li><a href="#ggplot">ggplot绘图</a></li>
-<li><a href="#yscale">Work on scale of axis</a></li>
+<li><a href="#ordiPlot">R向xlsx中输出多个sheets</a></li>
+<li><a href="#ggplot">差异表达基因画HeatMap</a></li>
+<li><a href="#yscale">基因symbols和ENSEMBL等ID转化</a></li>
 <li><a href="#layout">Work on layout</a></li>
 </ul>
-<div id="r向xlsx中输出多个sheets" class="section level2">
+</div>
+<div id="ordiPlot" class="section level2">
 <h2>R向xlsx中输出多个sheets</h2>
 <p>直接稍微修改下面的code即可，方便快捷。注意输入sheet前数据务必先转化为data frame格式。</p>
-<pre class="rmd"><code>for(i in 1:9){
-  geneName &lt;- row.names(FClist[[i]])
-  dat &lt;- cbind(PvalList[[i]][geneName,], FClist[[i]][,1])
-  dat &lt;- dat[order(dat[,2]),]
+<pre class="r"><code>for(i in 1:9){
+  dat &lt;- matrix(rnorm(50*4), 50, 4)
   dat &lt;- as.data.frame(dat)
-  colnames(dat) &lt;- paste0(cellnames[i], c(&#39;t value&#39;,&#39; Pr(&gt;|t|)&#39;,&#39; FDR&#39;,&#39; avg_log2FC&#39;) )
-  xlsx::write.xlsx(dat, file=&#39;CITE-Seq//DEGs.xlsx&#39;, sheetName = paste0(&#39;sheet&#39;, i), append = T)
+  colnames(dat) &lt;- c(&#39;t value&#39;,&#39; Pr(&gt;|t|)&#39;,&#39; FDR&#39;,&#39; avg_log2FC&#39;)
+  # xlsx::write.xlsx(dat, file=&#39;DEGs.xlsx&#39;, sheetName = paste0(&#39;sheet&#39;, i), append = T)
 }</code></pre>
 </div>
-<div id="快速选择前n个差异表达基因的信息" class="section level2">
-<h2>快速选择前n个差异表达基因的信息</h2>
-<pre class="rmd"><code> ## DEG analysis based on the annotated labels
-  seu &lt;- CreateSeuratObject(counts=datList$counts)
-  # standard log-normalization
+<div id="ggplot" class="section level2">
+<h2>快速选择前n个差异表达基因的信息并画HeatMap</h2>
+<pre class="r"><code> ## DEG analysis based on the annotated labels
+  # install.packages(&#39;DR.SC&#39;)
+  suppressPackageStartupMessages(library(DR.SC)  )</code></pre>
+<pre><code>## Warning: package &#39;spatstat.geom&#39; was built under R version 4.0.5</code></pre>
+<pre><code>## Warning: package &#39;spatstat.data&#39; was built under R version 4.0.4</code></pre>
+<pre class="r"><code>  seu &lt;- gendata_RNAExp(height=20, width=20,p=200, K=4)
+  library(Seurat)</code></pre>
+<pre><code>## Attaching SeuratObject</code></pre>
+<pre class="r"><code>  # standard log-normalization
   seu &lt;- NormalizeData(seu)
-  seu &lt;- ScaleData(seu)
-  Idents(seu) &lt;- factor(y)
-  dat &lt;- FindAllMarkers(seu)
-  library(dplyr)
-  # Efna5,Otx2 ,Wnt2b,Wnt3a,Hes3
-  dat %&gt;%
+  seu &lt;- ScaleData(seu)</code></pre>
+<pre><code>## Centering and scaling data matrix</code></pre>
+<pre class="r"><code>  Idents(seu) &lt;- factor(seu$true_clusters)
+  dat &lt;- FindAllMarkers(seu)</code></pre>
+<pre><code>## Calculating cluster 1</code></pre>
+<pre><code>## Calculating cluster 2</code></pre>
+<pre><code>## Calculating cluster 3</code></pre>
+<pre><code>## Calculating cluster 4</code></pre>
+<pre class="r"><code>  suppressPackageStartupMessages(library(dplyr) )</code></pre>
+<pre><code>## Warning: package &#39;dplyr&#39; was built under R version 4.0.5</code></pre>
+<pre class="r"><code>  dat %&gt;%
     group_by(cluster) %&gt;%
     top_n(n = 10, wt = avg_log2FC) -&gt; top10
-  markerList_true[[i]] &lt;- top10</code></pre>
+  seus &lt;- subset(seu, downsample = 300)
+## HeatMap
+library(ggplot2)
+p &lt;- DoHeatmap(seus, features = top10$gene, label = F) + 
+  theme(legend.text = element_text(size=16),
+        legend.title = element_text(size=18, face=&#39;bold&#39;),
+        axis.text.y = element_text(size=14)) +
+  guides(shape = guide_legend(override.aes = list(size=4)))#+ NoLegend()
+p</code></pre>
+<p><img src="/cn_note/R_other_note_files/figure-html/unnamed-chunk-2-1.png" width="672" /></p>
+<pre class="r"><code># ggsave(filename = &#39;heatMap_Brain1.pdf&#39;, plot = p,
+#        width = 12.5, height = 7, units = &quot;in&quot;, dpi = 1000)</code></pre>
+</div>
+<div id="yscale" class="section level2">
+<h2>基因symbols和ENSEMBL等ID的相互转化</h2>
+<pre class="r"><code>## 1. transfor Human gene symbols to Ensembl
+geneset &lt;- c(&#39;AQP4&#39;, &#39;HPCAL1&#39;, &#39;FREM3&#39;, &#39;TRABD2A&#39;, &#39;KRT17&#39;,
+    &#39;FABP7&#39; , &#39;ADCYAP1&#39; ,&#39;PVALB&#39;,
+    &#39;CCK&#39; ,&#39;ENC1&#39;,&#39;CUX2&#39;,&#39;RORB&#39;,&#39;NTNG2&#39;,&#39;MBP&#39;,&#39;PCP4&#39;,&quot;SNAP25&quot;, &quot;MOBP&quot;)
+suppressPackageStartupMessages(library(&quot;org.Hs.eg.db&quot;) )</code></pre>
+<pre><code>## Warning: package &#39;BiocGenerics&#39; was built under R version 4.0.5</code></pre>
+<pre class="r"><code># remember to install it if you don&#39;t have it already
+Ensembl &lt;- mapIds(org.Hs.eg.db, keys = geneset, 
+                    keytype = &quot;SYMBOL&quot;, column=&quot;ENSEMBL&quot;)</code></pre>
+<pre><code>## &#39;select()&#39; returned 1:many mapping between keys and columns</code></pre>
+<pre class="r"><code>cat(Ensembl[1:4], &#39;\n&#39;)</code></pre>
+<pre><code>## ENSG00000171885 ENSG00000115756 ENSG00000183090 ENSG00000186854</code></pre>
+<pre class="r"><code># 2. transfor Human gene Ensembl to symbols
+Symbol &lt;- mapIds(org.Hs.eg.db, keys = Ensembl, 
+                    keytype = &quot;ENSEMBL&quot;, column=&quot;SYMBOL&quot;)</code></pre>
+<pre><code>## &#39;select()&#39; returned 1:many mapping between keys and columns</code></pre>
+<pre class="r"><code>cat(Symbol[1:4], &#39;\n&#39;)</code></pre>
+<pre><code>## AQP4 HPCAL1 FREM3 TRABD2A</code></pre>
 </div>
